# eightchip

./: CMakeLists.txt  EightChip.sln  README.md  settings.ini
Debug/: EightChip.ilk
EightChip/: ECApp.cpp  ECApp.h  ECApp_OnCleanup.cpp  ECApp_OnInit.cpp  ECApp_OnLoop.cpp  ECCpu.cpp  ECCpu.h  ECCpu_Defs.h  ECCpu_Utils.cpp  EightChip.vcxproj  EightChip.vcxproj.filters  EightChipCPU.cpp  EightChipCPU.h  ReadMe.txt  main.cpp  settings.ini
EightChip/Debug/: CL.read.1.tlog  CL.write.1.tlog  EightChip.lastbuildstate  EightChip.pch  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
EightChip/EightChip/: EightChip.vcxproj.filters  EightChipCPU.cpp  EightChipCPU.h  main.cpp  stdafx.cpp
EightChip/ipch/eightchip-84c3715e/: eightchip-e5ecc5c1.ipch
includes/: ECApp.h  ECCpu.h  ECGlobals.h
ipch/EIGHTCHIP-99b19fb5/: EIGHTCHIP-81de57a1.ipch
ipch/eightchip-deaa0f8b/: eightchip-e5ecc5c1.ipch
ipch/eightchip-e1e8202b/: eightchip-e5ecc5c1.ipch
src/: CMakeLists.txt
src/app/: ECApp.cpp  ECAppUtils.cpp  ECApp_OnCleanup.cpp  ECApp_OnInit.cpp  ECApp_OnLoop.cpp
src/cpu/: ECCpu.cpp
src/utils/: ECCpu_Utils.cpp
